@@ -39,6 +39,7 @@
 #include <functional>
 #include <iostream>
 #include <fstream>
+#include <boost/algorithm/string/replace.hpp>
 
 namespace caspar { namespace env {
 
@@ -57,86 +58,92 @@ void check_is_configured()
 		CASPAR_THROW_EXCEPTION(invalid_operation() << msg_info(L"Enviroment properties has not been configured"));
 }
 
+std::wstring clean_path(std::wstring path)
+{
+	boost::replace_all(path, L"\\\\", L"/");
+	boost::replace_all(path, L"\\", L"/");
+
+	return path;
+}
+
+std::wstring ensure_trailing_slash(std::wstring folder)
+{
+	if (folder.at(folder.length() - 1) != L'/')
+		folder.append(L"/");
+
+	return folder;
+}
+
+std::wstring resolve_or_create(const std::wstring& folder)
+{
+	auto found_path = find_case_insensitive(folder);
+
+	if (found_path)
+		return *found_path;
+	else
+	{
+		boost::system::error_code ec;
+		boost::filesystem::create_directories(folder, ec);
+
+		if (ec)
+			CASPAR_THROW_EXCEPTION(user_error() << msg_info("Failed to create directory " + u8(folder) + " (" + ec.message() + ")"));
+
+		return folder;
+	}
+}
+
+void ensure_writable(const std::wstring& folder)
+{
+	static const std::wstring CREATE_FILE_TEST = L"casparcg_test_writable.empty";
+
+	boost::system::error_code	ec;
+	boost::filesystem::path		test_file(folder + L"/" + CREATE_FILE_TEST);
+	boost::filesystem::ofstream	out(folder + L"/" + CREATE_FILE_TEST);
+
+	if (out.fail())
+	{
+		boost::filesystem::remove(test_file, ec);
+		CASPAR_THROW_EXCEPTION(user_error() << msg_info(L"Directory " + folder + L" is not writable."));
+	}
+
+	out.close();
+	boost::filesystem::remove(test_file, ec);
+}
+
 void configure(const std::wstring& filename)
 {
 	try
 	{
-		initial = boost::filesystem::initial_path().wstring();
+		initial = clean_path(boost::filesystem::initial_path().wstring());
 
 		boost::filesystem::wifstream file(initial + L"/" + filename);
 		boost::property_tree::read_xml(file, pt, boost::property_tree::xml_parser::trim_whitespace | boost::property_tree::xml_parser::no_comments);
 
 		auto paths	= pt.get_child(L"configuration.paths");
-		media		= paths.get(L"media-path", initial + L"/media/");
-		log			= paths.get(L"log-path", initial + L"/log/");
-		ftemplate	= boost::filesystem::complete(paths.get(L"template-path", initial + L"/template/")).wstring();
-		data		= paths.get(L"data-path", initial + L"/data/");
-		font		= paths.get(L"font-path", initial + L"/font/");
-		thumbnails	= paths.get(L"thumbnail-path", initial + L"/thumbnail/");
+		media		= clean_path(paths.get(L"media-path", initial + L"/media/"));
+		log			= clean_path(paths.get(L"log-path", initial + L"/log/"));
+		ftemplate	= clean_path(boost::filesystem::complete(paths.get(L"template-path", initial + L"/template/")).wstring());
+		data		= clean_path(paths.get(L"data-path", initial + L"/data/"));
+		font		= clean_path(paths.get(L"font-path", initial + L"/font/"));
+		thumbnails	= clean_path(paths.get(L"thumbnail-path", initial + L"/thumbnail/"));
 	}
-	catch(...)
+	catch (...)
 	{
 		CASPAR_LOG(error) << L" ### Invalid configuration file. ###";
 		throw;
 	}
 
-	try
-	{
-		auto found_media_path = find_case_insensitive(media);
-		if (found_media_path)
-			media = *found_media_path;
-		else
-			boost::filesystem::create_directories(media);
+	media		= ensure_trailing_slash(resolve_or_create(media));
+	log			= ensure_trailing_slash(resolve_or_create(log));
+	ftemplate	= ensure_trailing_slash(resolve_or_create(ftemplate));
+	data		= ensure_trailing_slash(resolve_or_create(data));
+	font		= ensure_trailing_slash(resolve_or_create(font));
+	thumbnails	= ensure_trailing_slash(resolve_or_create(thumbnails));
 
-		auto found_template_path = find_case_insensitive(ftemplate);
-		if (found_template_path)
-			ftemplate = *found_template_path;
-		else
-			boost::filesystem::create_directories(ftemplate);
-
-		auto found_data_path = find_case_insensitive(data);
-		if (found_data_path)
-			data = *found_data_path;
-		else
-			boost::filesystem::create_directories(data);
-
-		auto found_font_path = find_case_insensitive(font);
-		if (found_font_path)
-			font = *found_font_path;
-		else
-			boost::filesystem::create_directories(font);
-
-		auto found_thumbnails_path = find_case_insensitive(thumbnails);
-		if (found_thumbnails_path)
-			thumbnails = *found_thumbnails_path;
-		else
-			boost::filesystem::create_directories(thumbnails);
-
-		auto found_log_path = find_case_insensitive(log);
-		if (found_log_path)
-			log = *found_log_path;
-		else if (!boost::filesystem::create_directories(log))
-			log = L"./";
-
-		//Make sure that all paths have a trailing slash
-		if(media.at(media.length()-1) != L'/')
-			media.append(L"/");
-		if(log.at(log.length()-1) != L'/')
-			log.append(L"/");
-		if(ftemplate.at(ftemplate.length()-1) != L'/')
-			ftemplate.append(L"/");
-		if(data.at(data.length()-1) != L'/')
-			data.append(L"/");
-		if(font.at(font.length()-1) != L'/')
-			font.append(L"/");
-		if(thumbnails.at(thumbnails.length()-1) != L'/')
-			thumbnails.append(L"/");
-	}
-	catch(...)
-	{
-		CASPAR_LOG_CURRENT_EXCEPTION();
-		CASPAR_LOG(error) << L"Failed to create configured directories.";
-	}
+	ensure_writable(log);
+	ensure_writable(ftemplate);
+	ensure_writable(data);
+	ensure_writable(thumbnails);
 }
 
 const std::wstring& initial_folder()
